objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Deposit_Confirmation_Number__c</fullName>
        <description>Verification number of deposits of founds in reserve for the Lead</description>
        <label>Deposit Confirmation Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_IP_Addres_URL__c</fullName>
        <description>IP addres of the source of the deposit</description>
        <label>Customer IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Sales_Order_Number__c</fullName>
        <description>Represents the Sales Order number for the Reservation</description>
        <label>Deposit Sales Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Taken_By__c</fullName>
        <label>Deposit Taken By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disposition_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disposition Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distance_from_Dealer__c</fullName>
        <formula>DISTANCE( Customer_Geocodes__c , GEOLOCATION(  PreferredDealerAccount_TXT__r.ShippingLatitude, PreferredDealerAccount_TXT__r.ShippingLongitude ) , &apos;mi&apos;)</formula>
        <label>Distance from Dealer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Division_CD__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doors_TXT__c</fullName>
        <label>Doors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Similar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Duplicate Similar</description>
        <label>Duplicate Similar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENR_Acura_Vehicles_Owned__c</fullName>
        <description>Number of owned vehicles from Acura Division</description>
        <label>Acura Vehicles Owned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENR_CI_Children_in_Household__c</fullName>
        <description>Represents the number of children within the house</description>
        <label>Customer Insight Children in Household</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_CI_Event_Attendance__c</fullName>
        <label>Customer Insight Event Attendance</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_CI_Extended_Warranty__c</fullName>
        <description>Details of the extended warranty</description>
        <label>Customer Insight Extended Warranty</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ENR_CI_Likely_to_Buy_Acura__c</fullName>
        <label>Customer Insight Likely to Buy Acura</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_CI_Likely_to_Buy_Honda__c</fullName>
        <label>Customer Insight Likely to Buy Honda</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_CI_Likely_to_Buy_PSP__c</fullName>
        <label>Customer Insight Likely to Buy PSP</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_CI_Ownership_Details__c</fullName>
        <description>Holds the long description of the customer Ownership history</description>
        <label>Customer Insight Ownership Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ENR_CI_Ownership__c</fullName>
        <description>Represents the simple details if a customer has been Honda Customer</description>
        <label>Customer Insight Ownership</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_CI_Service_History__c</fullName>
        <label>Customer Insight Service History</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ENR_Customer_Likeliness_to_Buy_Acura__c</fullName>
        <label>Customer Likeliness to Buy Acura</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_Customer_Likeliness_to_Buy_Honda__c</fullName>
        <label>Customer Likeliness to Buy Honda</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_Customer_Likeliness_to_Buy_PSP__c</fullName>
        <label>Customer Likeliness to Buy PSP</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_Extended_Warranty_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Car has Extended Warranty</description>
        <label>Extended Warranty Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENR_Honda_Vehicles_Owned__c</fullName>
        <description>Number of owned vehicles from Honda Division</description>
        <label>Honda Vehicles Owned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENR_Likeliness_to_Buy_Acura__c</fullName>
        <label>Customer Likeliness to Buy Acura</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_Likeliness_to_Buy_Honda__c</fullName>
        <label>Customer Likeliness to Buy Honda</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_Likeliness_to_Buy_PSP__c</fullName>
        <label>Customer Likeliness to Buy PSP</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENR_Ownership_Type__c</fullName>
        <description>Type of ownership</description>
        <label>Ownership Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current Owner</fullName>
                </value>
                <value>
                    <fullName>Former Owner</fullName>
                </value>
                <value>
                    <fullName>No Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ENR_Power_Equipment_Vehicles_Owned__c</fullName>
        <description>Number of owned vehicles from PE Division</description>
        <label>Power Equipment Vehicles Owned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENR_Power_Sports_Vehicles_Owned__c</fullName>
        <description>Number of owned vehicles from PSP Division</description>
        <label>Power Sports Vehicles Owned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENR_Total_Spent_on_Service_by_Customer__c</fullName>
        <label>Total Spent on Service by Customer</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENR_Total_Spent_on_Service_by_Warranty__c</fullName>
        <label>Total Spent on Service by Warranty</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Einstein_Predicted_Priority__c</fullName>
        <formula>If(LeadProvider_ID__r.Is_Urgent_Priority__c==True, &quot;Urgent&quot;,If((ISPICKVAL(Division_CD__c, &quot;B&quot;)|| ISPICKVAL(Division_CD__c, &quot;A&quot;)) &amp;&amp; Complete_Prediction_Score__c &gt;=40, &quot;Urgent&quot;,
If((ISPICKVAL(Division_CD__c, &quot;B&quot;)|| ISPICKVAL(Division_CD__c, &quot;A&quot;)) &amp;&amp; Complete_Prediction_Score__c &lt;40 &amp;&amp;Complete_Prediction_Score__c&gt;=20,&quot;Medium&quot;,
IF(ISPICKVAL(Division_CD__c, &quot;M&quot;) &amp;&amp;  Complete_Prediction_Score__c &gt;=25, &quot;Urgent&quot;,
IF (ISPICKVAL(Division_CD__c, &quot;M&quot;) &amp;&amp; Complete_Prediction_Score__c &lt;25 &amp;&amp; Complete_Prediction_Score__c&gt;=10,&quot;Medium&quot;,&quot;Low&quot;)))))</formula>
        <label>Einstein Predicted Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Prediction__c</fullName>
        <label>Einstein Prediction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_CheckedDate_TXT__c</fullName>
        <label>Email Checked Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Error_CD__c</fullName>
        <label>Email Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Error_Description_TXT__c</fullName>
        <label>Email Error Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enrichment_XML_Payload__c</fullName>
        <label>Enrichment XML Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Details_Urban_Science__c</fullName>
        <label>Error Details Urban Science</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exterior_Color__c</fullName>
        <label>Exterior Color</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External IDs</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Lead_Reference_Number__c</fullName>
        <label>External Lead Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Lead_User_Identifier__c</fullName>
        <description>External User Identifier in the provider system. Formerly &quot;Source User CD&quot; in eShopping</description>
        <label>External Lead User Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FinanceAmountType_TXT__c</fullName>
        <label>Finance Amount Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinanceAmount_TXT__c</fullName>
        <label>Finance Amount</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinanceMethod_TXT__c</fullName>
        <label>Finance Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinancialDetails_TXT__c</fullName>
        <label>Financial Details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Name_TXT__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name_TXT__c+&apos; &apos;+Last_Name_TXT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasEquity_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Equity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Error_CD__c</fullName>
        <label>Home Phone Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Error_Description_TXT__c</fullName>
        <label>Home Phone Error Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HondaCurrentProductsOwned2_TXT__c</fullName>
        <label>Honda Current Products Owned 2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HondaCurrentProductsOwned_TXT__c</fullName>
        <label>Honda Current Products Owned</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HondaHighValueTrimlinePropensity_NUM__c</fullName>
        <label>Honda High Value Trimline Propensity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HondaOwnershipStatusHousehold_TXT__c</fullName>
        <label>Honda Ownership Status Household</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HondaOwnershipStatus_TXT__c</fullName>
        <label>Honda Ownership Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hondacus_Flg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this a Honda Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>Salesforce ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <description>product image as sent from the website</description>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(&quot;https://powersports.honda.com/-/media/products/family/crf125f-big-wheel/trims/trim-main/crf125f-big-wheel/2021/2021-crf125f-big-wheel-red-650x380.png&quot;,&quot;image&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Walkin_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Walkin Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interior_Color__c</fullName>
        <label>Interior Color</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InventoryNumber_TXT__c</fullName>
        <label>Stock Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsMatchback_FLG__c</fullName>
        <description>This field will be used in Einstein scoring to Maximize(true) this field to have maximum win rate.</description>
        <formula>NOT(ISBLANK(Matchback_Date__c))</formula>
        <label>IsMatchback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Blank__c</fullName>
        <formula>IF(ISPICKVAL(Routing_Status__c, &apos;&apos;), true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Current_User__c</fullName>
        <formula>$User.Id =  Assigned_To_TXT__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Success__c</fullName>
        <description>This field being used in report</description>
        <formula>IF( ISPICKVAL( Routing_Status__c , &apos;Success&apos;) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Third_Party_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to get the value if the lead is third party duplicate</description>
        <label>Is Third Party Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_This_Lead_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is This Lead Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTWT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Which stands for light Weight</description>
        <label>LTWT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastActivityDate_DT__c</fullName>
        <label>Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastPowerEquipmentPurchaseDate_DT__c</fullName>
        <label>Last Power Equipment Purchase Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastPowerSportsPurchaseFinanceMethod_TXT__c</fullName>
        <label>Last Powersports Purchase Finance Method</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastPowersportsPurchaseDate_DT__c</fullName>
        <label>Last Powersports Purchase Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastVehiclePurchaseDate_DT__c</fullName>
        <label>Last Vehicle Purchase Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastVehiclePurchaseFinanceMethod_TXT__c</fullName>
        <label>Last Vehicle Purchase Finance Method</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_TXT__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestServiceDate_DT__c</fullName>
        <label>Latest Service Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Launchbox_ID_ID__c</fullName>
        <label>Launchbox_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Launchbox_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Launchbox ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeadAdditionalInfos__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-1950 Story name.
Description: This is store the Offers XML Data.
Source System: Coming from Integration.
Integration: Yes.
Data Transformation: N/A.
Functional Definition: This will be Stored Offers Data.</description>
        <label>LeadAdditionalInfos</label>
        <length>118216</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeadCampaignName_TXT__c</fullName>
        <label>Lead Campaign Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadProvider_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lead Provider Name</inlineHelpText>
        <label>Lead Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Lead Provider)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Coming_From_CRM__c</fullName>
        <label>Lead Coming From CRM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Dealer_Acknowledgement_Status_Code__c</fullName>
        <label>Lead Dealer Acknowledgement Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Group_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lead Group ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Submission_Date__c</fullName>
        <description>To load date when the lead was submitted to the dealer</description>
        <label>Lead Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadsourceOther_TXT__c</fullName>
        <label>Lead Source Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Description_TXT__c</fullName>
        <label>Location Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_Error_CD__c</fullName>
        <label>Location Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Error_Description_TXT__c</fullName>
        <label>Location Error Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_Status_TXT__c</fullName>
        <label>Location Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loyalbrand_TXT__c</fullName>
        <label>Loyal to the Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSRP_AMT__c</fullName>
        <label>MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Make_TXT__c</fullName>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketable_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Campaign_Name__c</fullName>
        <description>Marketing campaign that drove this lead.</description>
        <label>Marketing Campaign Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Matchback_Date__c</fullName>
        <label>Retail Sales Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Middle_Name_TXT__c</fullName>
        <label>Middle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddlewareUUID__c</fullName>
        <externalId>true</externalId>
        <label>MiddlewareUUID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Miles_Between_Customer_and_Dealer__c</fullName>
        <description>Business Unit: HELMS
Jira Story: LMS-3835 Story name
Description: This shows the distance between the dealer and customer in miles.
Source System: Coming from Dealer Locator Service through API callout.
Integration: Will add once we get the endpoint URL from the Integration Team.
Data Transformation: N/A
Functional Definition: This will be used in Einstein Dashboards or Reports.</description>
        <label>Miles Between Customer and Dealer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ModelDealerAccessoryPrice_AM__c</fullName>
        <label>Model Dealer Accessory Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ModelDestinationCharge_AM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Model Destination Charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Model_Error_CD__c</fullName>
        <label>Model Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Error_Description_TXT__c</fullName>
        <label>Model Error Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Model_Group_Name__c</fullName>
        <description>Model Group Name to show the Model Group which will be used in Dashboard and Reports</description>
        <label>Model Group Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Model_ID__c</fullName>
        <label>Model ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_IMG__c</fullName>
        <label>Model Image</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Model_Name_NM__c</fullName>
        <label>Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_TXT__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Lead_Providers__c</fullName>
        <label>Multiple Lead Providers</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NSX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NSX Tech</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Dealer_Number__c</fullName>
        <label>New Dealer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoRoutable_For_Data_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Business Unit: HELMS
Jira Story: UAT Defects
Description: To avoid routing opportunity that are data migrated
Source System: N/A
Integration: Data Migration
Data Transformation: N/A
Functional Definition: Enable flag to avoid routing opportunity that are data migrated</description>
        <label>NoRoutable For Data Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Dealer_Next_Step__c</fullName>
        <label>Notification Dealer Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Opportunity_Status__c</fullName>
        <label>Notification Opportunity Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned/Routed to Dealer</fullName>
                </value>
                <value>
                    <fullName>Auto-response sent</fullName>
                </value>
                <value>
                    <fullName>Lead Opened</fullName>
                </value>
                <value>
                    <fullName>Lead Received</fullName>
                </value>
                <value>
                    <fullName>Customer phoned (Inbound phone)</fullName>
                </value>
                <value>
                    <fullName>Customer emailed (Inbound email)</fullName>
                </value>
                <value>
                    <fullName>Salesperson responded by Email</fullName>
                </value>
                <value>
                    <fullName>Salesperson responded by Phone</fullName>
                </value>
                <value>
                    <fullName>Dealer Salesperson responded by email</fullName>
                </value>
                <value>
                    <fullName>Dealer Salesperson responded by Phone</fullName>
                </value>
                <value>
                    <fullName>Dealer Salesperson request another appointment by email</fullName>
                </value>
                <value>
                    <fullName>Dealer Salesperson request another appointment by phone</fullName>
                </value>
                <value>
                    <fullName>Credit Application</fullName>
                </value>
                <value>
                    <fullName>Credit Application (3rd party)</fullName>
                </value>
                <value>
                    <fullName>Trade-In Appraisal</fullName>
                </value>
                <value>
                    <fullName>Broadcast Email</fullName>
                </value>
                <value>
                    <fullName>Made Appointment</fullName>
                </value>
                <value>
                    <fullName>Demoed/Test Drove</fullName>
                </value>
                <value>
                    <fullName>Boat/Outboard Sales Presentation</fullName>
                </value>
                <value>
                    <fullName>Appointment Didn’t Show</fullName>
                </value>
                <value>
                    <fullName>Appointment Showed</fullName>
                </value>
                <value>
                    <fullName>Offer to Purchase</fullName>
                </value>
                <value>
                    <fullName>Model in Stock</fullName>
                </value>
                <value>
                    <fullName>Model not in Stock</fullName>
                </value>
                <value>
                    <fullName>Model on back order</fullName>
                </value>
                <value>
                    <fullName>Credit Denied</fullName>
                </value>
                <value>
                    <fullName>Dealer Salesperson marked sold</fullName>
                </value>
                <value>
                    <fullName>Salesperson marked vehicle sold</fullName>
                </value>
                <value>
                    <fullName>Lost Sales</fullName>
                </value>
                <value>
                    <fullName>Any additional vehicle sold info (delivered, punched, etc.)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_Reason__c</fullName>
        <label>Notification Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Sent_Date__c</fullName>
        <label>Notification Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NumberOfServicesInLast24Months_NUM__c</fullName>
        <label>Number Of Services In Last 24 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_NM__c</fullName>
        <label>Vin Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofAcuraProducts_NUM__c</fullName>
        <label>Number of Acura Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofHondaProducts_NUM__c</fullName>
        <label>Number of Honda Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofPowerSportsProducts_NUM__c</fullName>
        <label>Number of Powersports Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumrofPowerEquipProducts_NUM__c</fullName>
        <label>Number of Power Equipment Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OdometerStatus_TXT__c</fullName>
        <label>Odometer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Rolledover</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Original</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>